Fix items alignment and refactor div

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,13 +1,18 @@
-.header {
-  margin-top: 10%;
-}
+.header-link {
+  text-decoration: none;
+  margin-left: 13%;
 
+}
 .home-container{
     display: flex;
     flex-direction: row;
     margin-top: 40px;
 }
-
+.header-link > h4 {
+  display: inline-block;
+  font-size: 27px;
+  color: black;
+}
 .home-free{
     width: 40%;
     margin-left: 10%;
@@ -32,6 +37,7 @@
     overflow:hidden;
 }
 .two-phones > img{
+  margin-top: 5%;
   margin-left: -10%;
   transform: translateY(-10%);
   transition: all 1s ease-in-out;
@@ -42,12 +48,12 @@
 //     height: 100%;
 // }
 
-hgroup {
-  margin-left: 68%;
-  align-items: right;
-  flex-direction: row;
-  display: flex;
-}
+// hgroup {
+//   margin-left: 68%;
+//   align-items: right;
+//   flex-direction: row;
+//   display: flex;
+// }
 
 h2 {
     color: black;
@@ -59,11 +65,49 @@ h2 {
   background-color: rgba(140, 500, 212, 1.5);
   margin-top: -25px;
   margin-left: 55%;
+  display: inline-block;
 }
 .logout-button > h6 {
   color: white;
   font-style: bold;
 }
+
+
+
+.logo {
+  width: 4%;
+  height: 4%;
+  display: inline;
+  margin-left: 1%;
+  margin-top: 8px;
+}
+.login-signup{
+  display: inline;
+  margin-left: 50%;
+  align-items: right;
+
+}
+.login-button {
+  font-weight: 800;
+  padding-right: 2%;
+  color:black;
+}
+.login-button:hover {
+  color: aquamarine;
+}
+.signup-button {
+  color: white;
+  font-weight: 800;
+  border-radius: 50px;
+  padding: 15px 20px;
+  background-color: rgba(140, 500, 212, 1.5);
+  
+}
+
+.signup-button:hover{
+  color: black;
+}
+
 
 .below-free{
   margin: 16% 10%;;
