--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,41 +8,3 @@ header {
 body {
   height: 100%;
 }
-.logo {
-  width: 7%;
-  height: 7%;
-  display: inline;
-  margin-left: 10%;
-  margin-top: 8px;
-}
-.login-signup{
-  display: inline;
-  margin-left: 63%;
-  align-items: right;
-
-}
-.login-button {
-  font-weight: 800;
-  padding-right: 2%;
-  color:black;
-}
-.login-button:hover {
-  color: aquamarine;
-}
-.signup-button {
-  color: white;
-  font-weight: 800;
-  border-radius: 50px;
-  padding: 15px 20px;
-  background-color: rgba(140, 500, 212, 1.5);
-  
-}
-
-.signup-button:hover{
-  color: black;
-}
-.header-link {
-  text-decoration: none;
-  padding-bottom: 5%;
-
-}
